1. add .env file. 2. don't index now 3. add a root.js

--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="/styles/index.css">
+
         <title>Hello React!</title>
     </head>
     <body>
