add material-ui package, google font, adjust css and combine to reducers.

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="/styles/octicons/octicons.css">
+        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,500">
         <title>Search GitHub!</title>
     </head>
     <body>
