--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="/styles/octicons/octicons.css">
-        <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,500">
-        <title>Search GitHub!</title>
-    </head>
-    <body>
-        <div id="app"></div>
-        <script src="/build-client/bundle.js" charset="utf-8"></script>
-    </body>
+
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-10013090-3"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-10013090-3');
+  </script>
+
+  <!-- Google Adsense -->
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <link rel="icon" href="webIcon.png"> -->
+  <link rel="stylesheet" type="text/css" href="/styles/octicons/octicons.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:400,300,500">
+  <title>Search Your GitHub Starred Repo</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script src="/build-client/bundle.js" charset="utf-8"></script>
+</body>
+
 </html>
